[update] enable unittest

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,5 @@
 find_package( BLAS REQUIRED )
-
-include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
+find_package( unittest REQUIRED )
 
 add_compile_options(
   $<$<COMPILE_LANG_AND_ID:C,GNU>:-O2>
@@ -48,11 +47,14 @@ if( CMAKE_BUILD_TYPE MATCHES "Debug" )
 endif()
 
 add_library( symRMSD )
+target_include_directories( symRMSD PRIVATE ${unittest_DIR}/mod_files )
 target_link_libraries( symRMSD PRIVATE blas )
+target_link_libraries( symRMSD PRIVATE unittest )
 
 #add_subdirectory( XXX )
 
-list( APPEND f90_src mod_symRMSD.f90      )
+list( APPEND f90_src mod_symRMSD.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
+target_link_libraries( symRMSD PRIVATE unittest )
 
