--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,13 +48,16 @@ endif()
 
 add_library( symRMSD )
 target_include_directories( symRMSD PRIVATE ${unittest_DIR}/mod_files )
-target_link_libraries( symRMSD PRIVATE blas )
-target_link_libraries( symRMSD PRIVATE unittest )
 
-#add_subdirectory( XXX )
-
+list( APPEND f90_src mod_params.f90 )
+list( APPEND f90_src mod_cov.f90 )
+list( APPEND f90_src mod_det.f90 )
 list( APPEND f90_src mod_symRMSD.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
-target_link_libraries( symRMSD PRIVATE unittest )
+target_link_libraries( symRMSD PRIVATE blas )
+
+if( CMAKE_BUILD_TYPE MATCHES "Debug" )
+  add_subdirectory( test )
+endif()
 
