--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -153,7 +153,9 @@ add_executable( test_lower_bound )
 target_include_directories( test_lower_bound PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_lower_bound PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_permutation.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rmsd.f90
+                                      ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rmsd_brute.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_cov.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
                                       ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rot.f90
