[add] mod_branch.f90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,8 +52,16 @@ target_include_directories( symRMSD PRIVATE ${purelapack_DIR}/include )
 
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_optarg.f90 )
+list( APPEND f90_src mod_permutation.f90 )
+list( APPEND f90_src mod_rmsd.f90 )
+list( APPEND f90_src mod_rmsd_brute.f90 )
 list( APPEND f90_src mod_cov.f90 )
 list( APPEND f90_src mod_det.f90 )
+list( APPEND f90_src mod_rot.f90 )
+list( APPEND f90_src mod_svd.f90 )
+list( APPEND f90_src mod_Kabsch.f90 )
+list( APPEND f90_src mod_procrustes.f90 )
+list( APPEND f90_src mod_lower_bound.f90 )
 list( APPEND f90_src mod_symRMSD.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
