[add] mod_molecular_permutation.f90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,9 @@ target_include_directories( symRMSD PRIVATE ${purelapack_DIR}/include )
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_permutation.f90 )
+list( APPEND f90_src mod_element.f90 )
+list( APPEND f90_src mod_molecule.f90 )
+list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
 list( APPEND f90_src mod_cov.f90 )
@@ -68,6 +71,7 @@ list( APPEND f90_src mod_symRMSD.f90 )
 target_sources( symRMSD PRIVATE ${f90_src} )
 target_link_libraries( symRMSD PRIVATE blas )
 target_link_libraries( symRMSD PRIVATE purelapack )
+#target_link_libraries ( symRMSD jsonfortran::jsonfortran-static )
 
 if( CMAKE_BUILD_TYPE MATCHES "Debug" )
   add_subdirectory( test )
