--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -205,7 +205,7 @@ target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_svd.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_procrustes.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Kabsch.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_lower_bound.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_block_lower_bound.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
                                   test_tree.f90 )
 target_link_libraries( test_tree PRIVATE unittest )
