[update] mod_molecule.f90

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -194,8 +194,6 @@ add_executable( test_tree )
 target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
 target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_element.f90
-                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecule.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_permutation.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_permutation.f90
                                   ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rmsd.f90
@@ -213,4 +211,5 @@ target_include_directories( test_tree PRIVATE ${purelapack_DIR}/mod_files )
 target_include_directories( test_tree PRIVATE ${purelapack_DIR}/include )
 target_link_libraries( test_tree PRIVATE purelapack )
 target_link_libraries( test_tree PRIVATE blas )
+target_link_libraries( test_tree PRIVATE molutil )
 add_test( NAME test_tree COMMAND test_tree )
