--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,8 @@ target_include_directories( symRMSD PRIVATE ${purelapack_DIR}/include )
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_permutation.f90 )
-list( APPEND f90_src mod_molecular_permutation.f90 )
+#list( APPEND f90_src mod_molecular_rotation.f90 )
+#list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
 list( APPEND f90_src mod_cov.f90 )
@@ -66,8 +67,8 @@ list( APPEND f90_src mod_Kabsch.f90 )
 list( APPEND f90_src mod_procrustes.f90 )
 list( APPEND f90_src mod_lower_bound.f90 )
 list( APPEND f90_src mod_block_lower_bound.f90 )
-list( APPEND f90_src mod_tree.f90 )
-list( APPEND f90_src mod_symRMSD.f90 )
+#list( APPEND f90_src mod_tree.f90 )
+#list( APPEND f90_src mod_symRMSD.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
 target_link_libraries( symRMSD PRIVATE molutil )
