--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,8 @@ target_include_directories( symRMSD PRIVATE ${purelapack_DIR}/include )
 list( APPEND f90_src mod_params.f90 )
 list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_permutation.f90 )
-#list( APPEND f90_src mod_molecular_rotation.f90 )
+list( APPEND f90_src mod_group_permutation.f90 )
+list( APPEND f90_src mod_molecular_rotation.f90 )
 #list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
