[update] mod_block_lower_bound.f90, enable mol_block_list

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,7 +57,6 @@ list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_permutation.f90 )
 list( APPEND f90_src mod_group_permutation.f90 )
 list( APPEND f90_src mod_molecular_rotation.f90 )
-#list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
 list( APPEND f90_src mod_cov.f90 )
@@ -68,7 +67,7 @@ list( APPEND f90_src mod_Kabsch.f90 )
 list( APPEND f90_src mod_procrustes.f90 )
 list( APPEND f90_src mod_lower_bound.f90 )
 list( APPEND f90_src mod_block_lower_bound.f90 )
-#list( APPEND f90_src mod_tree.f90 )
+list( APPEND f90_src mod_tree.f90 )
 #list( APPEND f90_src mod_symRMSD.f90 )
 
 target_sources( symRMSD PRIVATE ${f90_src} )
