--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -198,26 +198,28 @@ target_link_libraries( test_block_lower_bound PRIVATE purelapack )
 target_link_libraries( test_block_lower_bound PRIVATE blas )
 add_test( NAME test_block_lower_bound COMMAND test_block_lower_bound )
 
-#add_executable( test_tree )
-#target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
-#target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_permutation.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_permutation.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rmsd.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rmsd_brute.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_cov.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_svd.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_procrustes.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Kabsch.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_block_lower_bound.f90
-#                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
-#                                  test_tree.f90 )
-#target_link_libraries( test_tree PRIVATE unittest )
-#target_include_directories( test_tree PRIVATE ${purelapack_DIR}/mod_files )
-#target_include_directories( test_tree PRIVATE ${purelapack_DIR}/include )
-#target_link_libraries( test_tree PRIVATE purelapack )
-#target_link_libraries( test_tree PRIVATE blas )
-#target_link_libraries( test_tree PRIVATE molutil )
-#add_test( NAME test_tree COMMAND test_tree )
+add_executable( test_tree )
+target_include_directories( test_tree PRIVATE ${unittest_DIR}/mod_files )
+target_sources( test_tree PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../mod_params.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_optarg.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_permutation.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rmsd.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_rmsd_brute.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_cov.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_det.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_svd.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_procrustes.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_Kabsch.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_group_permutation.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_rotation.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_molecular_permutation.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_block_lower_bound.f90
+                                  ${CMAKE_CURRENT_SOURCE_DIR}/../mod_tree.f90
+                                  test_tree.f90 )
+target_link_libraries( test_tree PRIVATE unittest )
+target_include_directories( test_tree PRIVATE ${purelapack_DIR}/mod_files )
+target_include_directories( test_tree PRIVATE ${purelapack_DIR}/include )
+target_link_libraries( test_tree PRIVATE purelapack )
+target_link_libraries( test_tree PRIVATE blas )
+target_link_libraries( test_tree PRIVATE molutil )
+add_test( NAME test_tree COMMAND test_tree )
