[update] mod_tree.f90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,6 +57,7 @@ list( APPEND f90_src mod_optarg.f90 )
 list( APPEND f90_src mod_permutation.f90 )
 list( APPEND f90_src mod_group_permutation.f90 )
 list( APPEND f90_src mod_molecular_rotation.f90 )
+list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
 list( APPEND f90_src mod_cov.f90 )
