[update] mod_Kabsch.f90

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,10 +60,10 @@ list( APPEND f90_src mod_molecular_rotation.f90 )
 list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
-list( APPEND f90_src mod_cov.f90 )
 list( APPEND f90_src mod_det.f90 )
 list( APPEND f90_src mod_rot.f90 )
 list( APPEND f90_src mod_svd.f90 )
+list( APPEND f90_src mod_pca.f90 )
 list( APPEND f90_src mod_Kabsch.f90 )
 list( APPEND f90_src mod_procrustes.f90 )
 list( APPEND f90_src mod_lower_bound.f90 )
