[update] mod_block_lower_bound.f90, enable mod_Hungarian method

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,6 +68,7 @@ list( APPEND f90_src mod_Kabsch.f90 )
 list( APPEND f90_src mod_procrustes.f90 )
 list( APPEND f90_src mod_lower_bound.f90 )
 list( APPEND f90_src mod_mol_block.f90 )
+list( APPEND f90_src mod_Hungarian.f90 )
 list( APPEND f90_src mod_block_lower_bound.f90 )
 list( APPEND f90_src mod_tree.f90 )
 #list( APPEND f90_src mod_symRMSD.f90 )
