--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -70,6 +70,7 @@ list( APPEND f90_src mod_lower_bound.f90 )
 list( APPEND f90_src mod_mol_block.f90 )
 list( APPEND f90_src mod_Hungarian.f90 )
 list( APPEND f90_src mod_block_lower_bound.f90 )
+list( APPEND f90_src mod_partial_rmsd.f90 )
 list( APPEND f90_src mod_tree.f90 )
 #list( APPEND f90_src mod_symRMSD.f90 )
 
