--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,16 +61,11 @@ list( APPEND f90_src mod_molecular_permutation.f90 )
 list( APPEND f90_src mod_rmsd.f90 )
 list( APPEND f90_src mod_rmsd_brute.f90 )
 list( APPEND f90_src mod_det.f90 )
-list( APPEND f90_src mod_rot.f90 )
 list( APPEND f90_src mod_svd.f90 )
-list( APPEND f90_src mod_pca.f90 )
 list( APPEND f90_src mod_Kabsch.f90 )
-list( APPEND f90_src mod_procrustes.f90 )
-list( APPEND f90_src mod_lower_bound.f90 )
 list( APPEND f90_src mod_mol_block.f90 )
 list( APPEND f90_src mod_Hungarian.f90 )
-list( APPEND f90_src mod_block_lower_bound.f90 )
-list( APPEND f90_src mod_partial_rmsd.f90 )
+list( APPEND f90_src mod_d_matrix.f90 )
 list( APPEND f90_src mod_tree.f90 )
 #list( APPEND f90_src mod_symRMSD.f90 )
 
